--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "node-modules": "^1.0.1",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "typescript": "^4.3.4"
   },
   "scripts": {
