--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "react-router-dom": "^5.2.0",
     "typescript": "^4.3.4"
   },
   "scripts": {
@@ -31,6 +32,7 @@
       "react-app",
       "react-app/jest"
     ]
+    
   },
   "browserslist": {
     "production": [
