--- a/package.json
+++ b/package.json
@@ -6,22 +6,31 @@
     "@types/axios": "^0.14.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "enzyme-adapter-react-16": "^1.15.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "reactstrap": "^8.9.0",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/enzyme": "^3.10.9",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "@types/react-redux": "^7.1.17",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
+    "enzyme": "^3.11.0",
     "node-modules": "^1.0.1",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
