--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "reactstrap": "^8.9.0",
     "redux": "^4.1.0",
     "redux-thunk": "^2.3.0",
+    "universal-cookie": "^4.0.4",
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
@@ -47,7 +48,6 @@
       "react-app",
       "react-app/jest"
     ]
-    
   },
   "browserslist": {
     "production": [
