--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,9 +18,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
-    "noImplicitAny": false,
-    "strictPropertyInitialization": false
+    "jsx": "react-jsx"
   },
   "include": [
     "src"
