--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/axios": "^0.14.0",
+    "@types/enzyme": "^3.10.9",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -51,6 +52,8 @@
     "@types/react-redux": "^7.1.17",
     "@types/react-router-dom": "^5.1.8",
     "@types/redux": "^3.6.0",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
+    "enzyme": "^3.11.0",
     "typescript": "^4.1.2"
   }
 }
