--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "@types/redux": "^3.6.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.2",
     "enzyme": "^3.11.0",
+    "jest": "^26.6.0",
+    "ts-node": "^10.0.0",
     "typescript": "^4.1.2"
   }
 }
