--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.22.0",
+    "aws-amplify": "^4.2.0",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "enzyme": "^3.11.0",
